Added Social icons to coming soon page

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -64,6 +64,15 @@
                     </form> -->
                     <a class="btn btn-primary btn-ellipse" target="_blank" href="mailto:info@alphabetmontessori.com?subject=New Enrollment!&body=Hello, %0d%0a I am looking for enrollment or Scheduling a tour of the school. Please contact me %0d%0a Phone No: <YOUR PHONE NUMBER> %0d%0a Email ID: <YOUR EMAIL ADDRESS> %0d%0a%0d%0a Regards,%0d%0a <YOUR NAME>">Click here for further information</a>
                   </div>
+                  
+                </div>
+                <div class="col-sm-12 text-center" style="margin-top: 45px;">
+                  <ul class="list-inline list-inline-xs list-inline-madison">
+                    <li><a class="icon icon-xxs fa-facebook icon-circle icon-gray-light-filled view-animate zoomInSmall delay-04 active" href="#"></a></li>
+                    <li><a class="icon icon-xxs fa-twitter icon-circle icon-gray-light-filled view-animate zoomInSmall delay-06 active" href="#"></a></li>
+                    <li><a class="icon icon-xxs fa-google icon-circle icon-gray-light-filled view-animate zoomInSmall delay-08 active" href="#"></a></li>
+                    <li><a class="icon icon-xxs fa-instagram icon-circle icon-gray-light-filled view-animate zoomInSmall delay-1 active" href="#"></a></li>
+                  </ul>
                 </div>
               </div>
             </div>
