--- a/coming-soon.html
+++ b/coming-soon.html
@@ -10,8 +10,10 @@
     <meta name="keywords" content="intense web design multipurpose template">
     <meta name="date" content="Dec 26">
     <link rel="icon" href="images/fav/favicon.ico" type="image/x-icon">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=IzaSyAr85a0yyxXlIGR3VESN2emS7szFRSQjOw&callback=initMap"
+    type="text/javascript"></script>
     <!-- Stylesheets-->
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,700%7CRoboto+Slab:400,300,700">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,700%7CRoboto+Slab:400,300,700">
     <link rel="stylesheet" href="css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/fav/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/fav/favicon-32x32.png">
@@ -43,7 +45,7 @@
               <div class="offset-top-15 offset-xl-top-30"></div>
               <div class="offset-top-30 offset-xl-top-60">
                 <div class="offset-top-66" style="max-width: 770px; margin-left: auto; margin-right: auto">
-                  <div class="DateCountdown" data-date="2019-12-1 01:00:00" data-bg="#e7e7e7" data-color="#3eb2cf" data-width="0.02"></div>
+                  <div class="DateCountdown" data-date="2020-1-1 01:00:00" data-bg="#e7e7e7" data-color="#3eb2cf" data-width="0.02"></div>
                 </div>
               </div>
               <div class="row justify-content-sm-center offset-top-30 offset-xl-top-60">
@@ -62,7 +64,7 @@
                         <button class="btn btn-primary" type="submit">Subscribe</button>
                       </div> 
                     </form> -->
-                    <a class="btn btn-primary btn-ellipse" target="_blank" href="mailto:info@alphabetmontessori.com?subject=New Enrollment!&body=Hello, %0d%0a I am looking for enrollment or Scheduling a tour of the school. Please contact me %0d%0a Phone No: <YOUR PHONE NUMBER> %0d%0a Email ID: <YOUR EMAIL ADDRESS> %0d%0a%0d%0a Regards,%0d%0a <YOUR NAME>">Click here for further information</a>
+                    <a class="btn btn-primary btn-ellipse" target="_blank" href="mailto:registrations@alphabetmontessori.com?subject=New Enrollment!&body=Hello, %0d%0a I am looking for enrollment or Scheduling a tour of the school. Please contact me %0d%0a Phone No: <YOUR PHONE NUMBER> %0d%0a Email ID: <YOUR EMAIL ADDRESS> %0d%0a%0d%0a Regards,%0d%0a <YOUR NAME>">Click here for further information</a>
                   </div>
                   
                 </div>
@@ -74,6 +76,43 @@
                     <li><a class="icon icon-xxs fa-instagram icon-circle icon-gray-light-filled view-animate zoomInSmall delay-1 active" href="#"></a></li>
                   </ul>
                 </div>
+                <!-- Contact info-->
+                <section class="section-60">
+                  <div class="container">
+                    <div class="row row-30 justify-content-sm-center features-list">
+                      <div class="col-md-4">
+                        <div class="unit flex-column unit-responsive-md section-20 section-md-45">
+                          <div class="unit-left"><span class="icon icon-contact-sm text-madison mdi mdi-phone"></span></div>
+                          <div class="unit-body"><a class="h6 text-regular" href="tel:+1-443-755-0100">+1-443-755-0100</a></div>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="unit flex-column unit-responsive-md section-20 section-md-45">
+                          <div class="unit-left"><span class="icon icon-contact-sm text-madison mdi mdi-map-marker"></span></div>
+                          <div class="unit-body"><a class="h6 text-regular" href="https://goo.gl/maps/sm8ptu2obmdCMjC89">6050 Meadowridge Center Drive <br class="visible-lg-inline"> Elkridge, MD 21075 USA</a></div>
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <div class="unit flex-column unit-responsive-md section-20 section-md-45">
+                          <div class="unit-left"><span class="icon icon-contact-sm text-madison mdi mdi-email-open"></span></div>
+                          <div class="unit-body"><a class="h6 text-regular" href="mailto:registrations@alphabetmontessori.com?subject=New Enrollment!&body=Hello, %0d%0a I am looking for enrollment or Scheduling a tour of the school. Please contact me %0d%0a Phone No: <YOUR PHONE NUMBER> %0d%0a Email ID: <YOUR EMAIL ADDRESS> %0d%0a%0d%0a Regards,%0d%0a <YOUR NAME>registrations@alphabetmontessori.com">registrations@alphabetmontessori.com</a></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+                <!-- Google Maps -->
+                <!-- <section class="section"> -->
+                  <!--Please, add the data attribute data-key="YOUR_API_KEY" in order to insert your own API key for the Google map.-->
+                  <!--Please note that YOUR_API_KEY should replaced with your key.-->
+                  <!--Example: <div class="google-map-container" data-key="YOUR_API_KEY">-->
+                  <!-- <div class="google-map-container" data-key="AIzaSyAr85a0yyxXlIGR3VESN2emS7szFRSQjOw" data-center="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-zoom="5" data-icon="images/gmap_marker.png" data-icon-active="images/gmap_marker_active.png" data-styles="[{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:60}]},{&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:40},{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;administrative.province&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;},{&quot;lightness&quot;:30}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#ef8c25&quot;},{&quot;lightness&quot;:40}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.stroke&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi.park&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#b6c54c&quot;},{&quot;lightness&quot;:40},{&quot;saturation&quot;:-40}]},{}]">
+                    <div class="google-map"></div>
+                    <ul class="google-map-markers">
+                      <li data-location="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-description="9870 St Vincent Place, Glasgow"></li>
+                    </ul>
+                  </div>
+                </section> -->
               </div>
             </div>
           </div>
