Images for caroussel finished and colors changed to pink

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="date" content="Dec 26">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Stylesheets-->
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,700%7CRoboto+Slab:400,300,700">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,700%7CRoboto+Slab:400,300,700">
     <link rel="stylesheet" href="css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/fav/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/fav/favicon-32x32.png">
@@ -213,7 +213,7 @@
       </header>
       <section class="swiper-container swiper-slider" data-loop="true" data-autoplay="5000" data-simulate-touch="true">
         <div class="swiper-wrapper">
-          <div class="swiper-slide" data-slide-bg="images/slide-01-1920x810.jpg">
+          <div class="swiper-slide" data-slide-bg="canva/cars3-alphabet.png">
             <div class="swiper-slide-caption section-70 section-lg-114 header-transparent-slide-caption">
               <div class="container">
                 <div class="row row-50 justify-content-sm-center justify-content-xl-end no-gutters">
@@ -232,7 +232,7 @@
               </div>
             </div>
           </div>
-          <div class="swiper-slide" data-slide-bg="images/slide-02-1920x810.jpg">
+          <div class="swiper-slide" data-slide-bg="canva/cars1-alphabet.png">
             <div class="swiper-slide-caption section-70 section-lg-114 header-transparent-slide-caption">
               <div class="container">
                 <div class="row row-50 justify-content-sm-center justify-content-xl-start no-gutters">
@@ -251,7 +251,7 @@
               </div>
             </div>
           </div>
-          <div class="swiper-slide" data-slide-bg="images/slide-03-1920x810.jpg">
+          <div class="swiper-slide" data-slide-bg="canva/cars4-alphabet.png">
             <div class="swiper-slide-caption section-70 section-lg-114 header-transparent-slide-caption">
               <div class="container">
                 <div class="row row-50 justify-content-sm-center justify-content-xl-end no-gutters">
@@ -261,6 +261,25 @@
                     </div>
                     <div class="offset-top-20 offset-sm-top-40 offset-xxl-top-60" data-caption-animate="fadeInUp" data-caption-delay="150" data-caption-duration="1700">
                       <h5 class="font-default">With us, your kid will enjoy plenty of different activities that will develop them and act as a perfect ground for further development. Explore the bright future of your child at Kids Tree Preschool!</h5>
+                    </div>
+                    <div class="offset-top-20 offset-xxl-top-40" data-caption-animate="fadeInUp" data-caption-delay="400" data-caption-duration="1700"><a class="btn btn-ellipse btn-madison" href="login-register.html">Sign Up for Excursion</a>
+                      <div class="inset-sm-left-30 d-xl-inline-block"><a class="btn btn-ellipse btn-primary-transparent d-none d-xl-inline-block" href="academic.html">Learn More</a></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide" data-slide-bg="canva/cars2-alphabet.png">
+            <div class="swiper-slide-caption section-70 section-lg-114 header-transparent-slide-caption">
+              <div class="container">
+                <div class="row row-50 justify-content-sm-center justify-content-xl-start no-gutters">
+                  <div class="col-lg-6 text-lg-left col-sm-10">
+                    <div data-caption-animate="fadeInUp" data-caption-delay="100" data-caption-duration="1700">
+                      <h1>A Perfect Learning Center for Your Kids.</h1>
+                    </div>
+                    <div class="offset-top-20 offset-sm-top-40 offset-xxl-top-60" data-caption-animate="fadeInUp" data-caption-delay="150" data-caption-duration="1700">
+                      <h5 class="font-default">Any successful career starts with good education. At our learning center, your children will have deeper knowledge of all necessary subjects that will be especially useful for them.</h5>
                     </div>
                     <div class="offset-top-20 offset-xxl-top-40" data-caption-animate="fadeInUp" data-caption-delay="400" data-caption-duration="1700"><a class="btn btn-ellipse btn-madison" href="login-register.html">Sign Up for Excursion</a>
                       <div class="inset-sm-left-30 d-xl-inline-block"><a class="btn btn-ellipse btn-primary-transparent d-none d-xl-inline-block" href="academic.html">Learn More</a></div>
