Learn more about Montessori

--- a/academic.html
+++ b/academic.html
@@ -2,16 +2,19 @@
 <html class="wide wow-animation" lang="en">
   <head>
     <!-- Site Title-->
-    <title>Programs</title>
+    <title>Our Programs</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="keywords" content="intense web design multipurpose template">
     <meta name="date" content="Dec 26">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/fav/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/fav/favicon-16x16.png">
     <!-- Stylesheets-->
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,700%7CRoboto+Slab:400,300,700">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,700%7CRoboto+Slab:400,300,700">
     <link rel="stylesheet" href="css/style.css">
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
@@ -76,12 +79,12 @@
               </div>
               <div class="rd-navbar-menu-wrap clearfix">
                 <!--Navbar Brand-->
-                <div class="rd-navbar-brand"><a class="d-inline-block" href="index.html"><img class="d-none d-xxl-inline-block" src="images/logo-199-70.png" width="199" height="70" alt=""/><img class="d-xxl-none" src="images/logo4-81x119.png" width="81" height="119" alt=""/></a></div>
+                <div class="rd-navbar-brand"><a class="d-inline-block" href="index.html"><img class="d-none d-xxl-inline-block" src="images/alphabets_logo_transparent.png" width="199" height="70" alt=""/><img class="d-xxl-none" src="images/alphabets_logo_transparent.png" width="341" height="119" alt=""/></a></div>
                 <div class="rd-navbar-nav-wrap">
                   <div class="rd-navbar-mobile-scroll">
                     <div class="rd-navbar-mobile-header-wrap">
                       <!--Navbar Brand Mobile-->
-                      <div class="rd-navbar-mobile-brand"><a href="index.html"><img width='130' height='130' src='images/logo-170x172.png' alt=''/></a></div>
+                      <div class="rd-navbar-mobile-brand"><a href="index.html"><img width='130' height='130' src='images/alphabets_logo_transparent.png' alt=''/></a></div>
                     </div>
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
@@ -476,14 +479,14 @@
                 <p>Enter your email address to get the latest news, special events and activities delivered right to your inbox.</p>
               </div>
               <div class="offset-top-10">
-                      <form class="rd-mailform form-subscribe" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
-                        <div class="form-wrap">
-                          <input class="form-input form-input-sm" placeholder="Your e-mail" type="email" name="email" data-constraints="@Required @Email">
-                        </div>
-                        <div class="form-button">
-                          <button class="btn btn-sm btn-primary btn-ellipse" type="submit">Subscribe</button>
-                        </div>
-                      </form>
+                <form class="rd-mailform form-subscribe" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
+                  <div class="form-wrap">
+                    <input class="form-input form-input-sm" placeholder="Your e-mail" type="email" name="email" data-constraints="@Required @Email">
+                  </div>
+                  <div class="form-button">
+                    <button class="btn btn-sm btn-primary btn-ellipse" type="submit">Subscribe</button>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
