--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     <ul class="rd-navbar-nav">
                       <li class="active"><a href="index.html">Home</a>
                       </li>
-                      <li><a href="#aboutus">About Us</a>
+                      <li><a href="index.html#aboutus">About Us</a>
                       </li>
-                      <li><a href="#programs">Our Programs</a>
+                      <li><a href="index.html#programs">Our Programs</a>
                       </li>
                       <!-- <li><a href="#">Elements</a>
                         <ul class="rd-navbar-dropdown">
@@ -181,11 +181,11 @@
                           </li>
                         </ul> -->
                       </li>
-                      <li><a href="donate.html">Events</a>
+                      <li><a href="#">Events</a>
                       </li>
-                      <li><a href="donate.html">Blogs</a>
+                      <li><a href="#">Blogs</a>
                       </li>
-                      <li><a href="contacts.html">Contacts</a>
+                      <li><a href="#">Contacts</a>
                       </li>
                       <!-- <li class="d-xl-none"><a href="shopping-cart.html">Shopping Cart (2)</a></li> -->
                     </ul>
@@ -403,7 +403,7 @@
                 <div class="offset-top-35 offset-lg-top-60 view-animate fadeInLeftSm delay-08">
                   <p>You, as a parent should also know about the core capabilities of the kids which they are going to gain as they learn through the authentic montessori way. It is important that your children develops confidence and compassion. At the same time, it is equally important that a parent should be confident enough that they are providing the right way of education. Watch this video from the founders of google. Our responsibility don't stop by educating our children but also every single individual of our community. </p>
                 </div>
-                <div class="offset-top-30 view-animate fadeInLeftSm delay-1"><a class="btn btn-ellipse btn-icon btn-icon-right btn-default" href="#programs"><span class="icon fa-arrow-right"></span><span>More about Authentic Montessori Learning</span></a></div>
+                <div class="offset-top-30 view-animate fadeInLeftSm delay-1"><a class="btn btn-ellipse btn-icon btn-icon-right btn-default" href="why-montessori.html"><span class="icon fa-arrow-right"></span><span>More about Authentic Montessori Learning</span></a></div>
               </div>
             </div>
           </div>
@@ -756,10 +756,10 @@
         <!--Please, add the data attribute data-key="YOUR_API_KEY" in order to insert your own API key for the Google map.-->
         <!--Please note that YOUR_API_KEY should replaced with your key.-->
         <!--Example: <div class="google-map-container" data-key="YOUR_API_KEY">-->
-        <div class="google-map-container" data-center="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-zoom="5" data-icon="images/gmap_marker.png" data-icon-active="images/gmap_marker_active.png" data-styles="[{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:60}]},{&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:40},{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;administrative.province&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;},{&quot;lightness&quot;:30}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#ef8c25&quot;},{&quot;lightness&quot;:40}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.stroke&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi.park&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#b6c54c&quot;},{&quot;lightness&quot;:40},{&quot;saturation&quot;:-40}]},{}]">
+        <div class="google-map-container" data-key="AIzaSyBkFS5d7-vewG0Pex_mqYr7s4AdKxLYInA" data-center="6050 Meadowridge Center Drive, Elkridge, MD 21075 USA" data-zoom="5" data-icon="images/gmap_marker.png" data-icon-active="images/gmap_marker_active.png" data-styles="[{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:60}]},{&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:40},{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;administrative.province&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;},{&quot;lightness&quot;:30}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#ef8c25&quot;},{&quot;lightness&quot;:40}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.stroke&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi.park&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#b6c54c&quot;},{&quot;lightness&quot;:40},{&quot;saturation&quot;:-40}]},{}]">
           <div class="google-map"></div>
           <ul class="google-map-markers">
-            <li data-location="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-description="9870 St Vincent Place, Glasgow"></li>
+            <li data-location="6050 Meadowridge Center Drive, Elkridge, MD 21075 USA" data-description="6050 Meadowridge Center Drive, Elkridge, MD 21075 USA"></li>
           </ul>
         </div>
       </section>
@@ -793,7 +793,7 @@
           <div class="container section-60">
             <div class="row row-50 justify-content-xl-between justify-content-sm-center">
               <div class="col-lg-3 col-xl-2">
-                <!--Footer brand--><a class="d-inline-block" href="index.html"><img width="203" height="225" src="images/alphabets_logo_only.png" alt=""></a>
+                <!--Footer brand--><a class="d-inline-block" href="index.html"><img width="243" height="225" src="images/alphabets_logo_only.png" alt=""></a>
               </div>
               <div class="col-sm-10 col-lg-5 col-xl-4 text-xl-left">
                 <h6 class="font-weight-bold">Contact us</h6>
