--- a/why-montessori.html
+++ b/why-montessori.html
@@ -88,32 +88,21 @@
                     </div>
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                        <li><a href="index.html">Home</a>
-                        </li>
-                        <li><a href="index.html#aboutus">About Us</a>
-                        </li>
-                        <li><a href="index.html#programs">Our Programs</a>
-                        </li>
-                      
-                      <li><a href="#">Gallery</a>
-                        <ul class="rd-navbar-dropdown">
-                          <li><a href="grid-gallery.html">Grid Gallery</a>
-                          </li>
-                          <li><a href="grid-without-padding-gallery.html">Grid Without Padding Gallery</a>
-                          </li>
-                          <li><a href="masonry-gallery.html">Masonry Gallery</a>
-                          </li>
-                          <li><a href="cobbles-gallery.html">Cobbles Gallery</a>
-                          </li>
-                        </ul>
+                      <li class="active"><a href="index.html">Home</a>
                       </li>
-                      <li><a href="#">Our Staff</a>
+                      <li><a href="index.html#aboutus">Our School</a>
+                      </li>
+                      <li><a href="index.html#programs">Our Programs</a>
                       </li>
                       <li><a href="#">Events</a>
                       </li>
-                      <li><a href="#">Blogs</a>
+                      <li><a href="">Gallery</a>
                       </li>
-                      <li><a href="#">Contacts</a>
+                      <li><a href="#">Careers</a>
+                      </li>
+                      <li><a href="#">Parents Pioneer</a>
+                      </li>
+                      <li><a href="#">Contact Us</a>
                       </li>
                     </ul>
                     <!--RD Navbar Mobile Search-->
