Adding more changes to the content

--- a/academic.html
+++ b/academic.html
@@ -88,21 +88,21 @@
                     </div>
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li><a href="index.html">Home</a>
+                      <li class="active"><a href="index.html">Home</a>
                       </li>
                       <li><a href="index.html#aboutus">Our School</a>
                       </li>
-                      <li class="active"><a href="academic.html">Our Programs</a>
+                      <li><a href="index.html#programs">Our Programs</a>
                       </li>
-                      <li><a href="#">Events</a>
+                      <li><a href="index.html#events">Events</a>
                       </li>
-                      <li><a href="">Gallery</a>
+                      <li><a href="gallery.html">Gallery</a>
                       </li>
-                      <li><a href="#">Careers</a>
+                      <li><a href="careers.html">Careers</a>
                       </li>
-                      <li><a href="#">Parents Pioneer</a>
+                      <li><a href="parents-pioneer.html">Parents Pioneer</a>
                       </li>
-                      <li><a href="#">Contact Us</a>
+                      <li><a href="index.html#contactus">Contact Us</a>
                       </li>
                     </ul>
                     <!--RD Navbar Mobile Search-->
@@ -162,7 +162,7 @@
                   <ul class="nav nav-tabs">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#tabs-1-1" data-toggle="tab">Infants</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-2" data-toggle="tab">Toddlers</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-3" data-toggle="tab">Pre-School & Kindergarten</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-3" data-toggle="tab">Children's House</a></li>
                   </ul>
                   <!--Tab panes-->
                   <div class="tab-content">
@@ -367,7 +367,7 @@
                       </section>
                     </div>
                     <div class="tab-pane fade show" id="tabs-1-3">
-                      <h4 class="font-weight-bold home-headings-custom">Pre-School & Kindergarten</h4>
+                      <h4 class="font-weight-bold home-headings-custom">Children House</h4>
                       <h6 class="font-weight-bold home-headings-custom">Approx 3 Years to 6 Years</h6>
                       <p>This is the correct stage where their curiosity transforms into inspiration, discovery and development. This program of our school features advanced curriculum, enrichment and self development. There will be so many choices for them to engage themselves.</p>
                       <section class="section-bottom-25 section-xl-bottom-25 offset-xl-top-20" >
@@ -505,7 +505,7 @@
                   <li class="offset-top-15">
                     <div class="unit flex-row align-items-center unit-spacing-xs">
                       <div class="unit-left"><span class="icon mdi mdi-map-marker text-middle icon-xs text-madison"></span></div>
-                      <div class="unit-body text-left"><a class="text-dark" href="#">6050 Meadowridge Center Drive, Elkridge, MD 21075 USA</a></div>
+                      <div class="unit-body text-left"><a class="text-dark" href="#">6050 Meadowridge Center Drive, Suite# 100, Elkridge, MD 21075 USA</a></div>
                     </div>
                   </li>
                   <li class="offset-top-15">
