--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
               <div class="rd-navbar-panel">
                 <!-- RD Navbar Toggle-->
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar, .rd-navbar-nav-wrap"><span></span></button>
-                <h4 class="panel-title d-lg-none">Our Programs</h4>
+                <h4 class="panel-title d-lg-none">Gallery</h4>
                 <!-- RD Navbar Right Side Toggle-->
                 <button class="rd-navbar-top-panel-toggle d-lg-none" data-rd-navbar-toggle=".rd-navbar-top-panel"><span></span></button>
                 <div class="rd-navbar-top-panel">
@@ -88,21 +88,21 @@
                     </div>
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li><a href="index.html">Home</a>
+                      <li class="active"><a href="index.html">Home</a>
                       </li>
                       <li><a href="index.html#aboutus">Our School</a>
                       </li>
-                      <li><a href="academic.html">Our Programs</a>
+                      <li><a href="index.html#programs">Our Programs</a>
                       </li>
-                      <li><a href="#">Events</a>
+                      <li><a href="index.html#events">Events</a>
                       </li>
-                      <li class="active"><a href="">Gallery</a>
+                      <li><a href="gallery.html">Gallery</a>
                       </li>
-                      <li><a href="#">Careers</a>
+                      <li><a href="careers.html">Careers</a>
                       </li>
-                      <li><a href="#">Parents Pioneer</a>
+                      <li><a href="parents-pioneer.html">Parents Pioneer</a>
                       </li>
-                      <li><a href="#">Contact Us</a>
+                      <li><a href="index.html#contactus">Contact Us</a>
                       </li>
                     </ul>
                     <!--RD Navbar Mobile Search-->
@@ -370,7 +370,7 @@
                   <li class="offset-top-15">
                     <div class="unit flex-row align-items-center unit-spacing-xs">
                       <div class="unit-left"><span class="icon mdi mdi-map-marker text-middle icon-xs text-madison"></span></div>
-                      <div class="unit-body text-left"><a class="text-dark" href="#">6050 Meadowridge Center Drive, Elkridge, MD 21075 USA</a></div>
+                      <div class="unit-body text-left"><a class="text-dark" href="#">6050 Meadowridge Center Drive, Suite# 100, Elkridge, MD 21075 USA</a></div>
                     </div>
                   </li>
                   <li class="offset-top-15">
