--- a/why-montessori.html
+++ b/why-montessori.html
@@ -94,15 +94,15 @@
                       </li>
                       <li><a href="index.html#programs">Our Programs</a>
                       </li>
-                      <li><a href="#">Events</a>
+                      <li><a href="index.html#events">Events</a>
                       </li>
-                      <li><a href="">Gallery</a>
+                      <li><a href="gallery.html">Gallery</a>
                       </li>
-                      <li><a href="#">Careers</a>
+                      <li><a href="careers.html">Careers</a>
                       </li>
-                      <li><a href="#">Parents Pioneer</a>
+                      <li><a href="parents-pioneer.html">Parents Pioneer</a>
                       </li>
-                      <li><a href="#">Contact Us</a>
+                      <li><a href="index.html#contactus">Contact Us</a>
                       </li>
                     </ul>
                     <!--RD Navbar Mobile Search-->
@@ -181,7 +181,7 @@
               <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-2" data-toggle="tab">Method of Montessori</a></li>
               <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-3" data-toggle="tab">The Prepared Environment</a></li>
               <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-4" data-toggle="tab">Misconceptions</a></li>
-              <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-6" data-toggle="tab">Montessorians You know</a></li>
+              <!-- <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-6" data-toggle="tab">Montessorians You know</a></li> -->
               <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-7" data-toggle="tab">Resources for your reference</a></li>
             </ul>
             <!--Tab panes-->
@@ -327,7 +327,7 @@
                         </div>
                       </div>
               </div>
-              <div class="tab-pane fade" id="tabs-1-6">
+              <!-- <div class="tab-pane fade" id="tabs-1-6">
                 <h2 class="home-headings-custom font-weight-bold fadeInLeftSm delay-06">Famous Montesorrians</h2>
                 <div class="row row-30 text-lg-left offset-top-60">
                     <div class="col-md-6 col-lg-3"><img class="img-responsive d-inline-block img-rounded" src="images/jimmywales.jpeg" width="270" height="270" alt="">
@@ -427,7 +427,7 @@
                       </div>
                     </div>
                   </div>
-              </div>
+              </div> -->
               <div class="tab-pane fade" id="tabs-1-5">
                 <h2 class="font-weight-bold d-none d-xl-block">Junior Kindergarten</h2>
                 <div class="offset-xl-top-60">
@@ -510,7 +510,7 @@
                     <li class="offset-top-15">
                       <div class="unit flex-row align-items-center unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-map-marker text-middle icon-xs text-madison"></span></div>
-                        <div class="unit-body text-left"><a class="text-dark" href="#">6050 Meadowridge Center Drive, Elkridge, MD 21075 USA</a></div>
+                        <div class="unit-body text-left"><a class="text-dark" href="#">6050 Meadowridge Center Drive, Suite# 100, Elkridge, MD 21075 USA</a></div>
                       </div>
                     </li>
                     <li class="offset-top-15">
